src/objects/OCD_Beh_Discount_Item__c.object
<CustomObject>
    <fields>
        <fullName>Adj_Type__c</fullName>
        <label>Adj Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apply_To__c</fullName>
        <label>Apply To</label>
        <picklist>
            <picklistValues>
                <fullName>AllReagents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trad IH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Based_On__c</fullName>
        <label>Based On</label>
        <picklist>
            <picklistValues>
                <fullName>AllReagents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AllProducts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trad IH</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beh_Discount_ID__c</fullName>
        <formula>CASESAFEID( OCD_Beh_Discount__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beh Discount ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;USA&quot;</defaultValue>
        <description>To identify a country specific discount</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <defaultValue>&quot;Beh Disc:&quot;</defaultValue>
        <label>Discount Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Volume</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GroupVolume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductQtyComparison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PurchaseAmount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssayCount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL Volume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <inlineHelpText>This should match the Criteria Group Id in the corresponding Behavior Eligibility Object.</inlineHelpText>
        <label>Group Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Adj_Amount__c</fullName>
        <label>Max Adj Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Qty__c</fullName>
        <label>Max Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Sites__c</fullName>
        <description>Maximun Site count</description>
        <label>Max Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Adj_Amount__c</fullName>
        <label>Min Adj Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Qty__c</fullName>
        <label>Min Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Sites__c</fullName>
        <description>Lower bound of site count</description>
        <label>Min Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiFamilyOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MultiFamilyOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCD_Beh_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCD Beh Discount</label>
        <referenceTo>OCD_Beh_Discount__c</referenceTo>
        <relationshipLabel>Discount Items</relationshipLabel>
        <relationshipName>OCD_Beh_Discount_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Applied_On__c</fullName>
        <label>Products Applied On</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_Based_On__c</fullName>
        <label>Products Based On</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_LHS__c</fullName>
        <label>Products LHS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_RHS__c</fullName>
        <label>Products RHS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qty_to_exclude__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Applicable only to Discount Type :Volume (From the Product Volume Qualified , the numbers in this field will be excluded.If not applicable , enter zero)</inlineHelpText>
        <label>Qty to exclude</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OCD Beh Discount Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCD Beh Discount Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>